--- a/beast/makefile
+++ b/beast/makefile
@@ -3,4 +3,4 @@ CFLAGS = `pkg-config --cflags opencv`
 LIBS = `pkg-config --libs opencv`
 
 all: $(OBJ)
-	$(CC) beast.cpp -o beast $(OBJ) $(LIBS)
+	$(CC) -g beast.cpp -o beast $(OBJ) $(LIBS)
