1. wrote clear instructions on how to generate constellation database, and added a number of helper scripts to automate the large number of steps in the process 2. nailed down the data structure used by beast 3. wrote guide on how to set up development environment for debugging the constellation detection program 4. every parameter needed to custom taylor the database to a particular star tracker is now found automatically by astrometry, aside from minimum star magnitude and noise magnitude. These two parameters are configurable as outlined in README.md 5. star position is automatically updated to the current year 6. stars with highly variable brightness are filtered out 7. hiparcos catalog is sorted and filtered based on star brightness 8. uses actual hiparcos data to determine cases where star brightness would be ambiguous in the presence of noise. one less thing to worry about 9. added an R program written by another NASA intern which does a statistical analysis of star distribution the hiparcos catalog. This will be useful in determining what we should set the minimum star magnitude to, and identifying the presence of any exclusion zones where the star tracker will not work. R is an open source programming language used by mathematicians

--- a/beast/beast.project
+++ b/beast/beast.project
@@ -28,14 +28,10 @@ long_line_behaviour=1
 long_line_column=72
 
 [files]
-current_page=0
-FILE_NAME_0=1720;C++;0;EUTF-8;1;1;0;%2Fhome%2Fandrew%2Fsoftware-testing%2Fbeast%2Fbeast.cpp;0;4
-FILE_NAME_1=69;Sh;0;EUTF-8;1;1;0;%2Fhome%2Fandrew%2Fsoftware-testing%2Fbeast%2Fdebug;0;4
-FILE_NAME_2=107;Python;0;EUTF-8;1;1;0;%2Fhome%2Fandrew%2Fsoftware-testing%2Fbeast%2Fgendb.py;0;4
-FILE_NAME_3=30903;C++;0;EUTF-8;1;1;0;%2Fusr%2Finclude%2Fc%2B%2B%2F4.8%2Fbits%2Fstl_vector.h;0;4
+current_page=-1
 
 [VTE]
-last_dir=/home/andrew/ops-class.org/os161
+last_dir=/home/ubuntu/adaptive
 
 [build-menu]
 EX_00_LB=_Execute
