converted beast to object oriented code

--- a/beast/makefile
+++ b/beast/makefile
@@ -3,5 +3,5 @@ CFLAGS = `pkg-config --cflags opencv`
 LIBS = `pkg-config --libs opencv`
 
 all: $(OBJ)
-	$(CC) -g beast.cpp -o beast $(OBJ)
+	$(CC) -g -O0 beast.cpp -o beast $(OBJ)
 	$(CC) -g getstars.cpp -o getstars $(OBJ) $(LIBS)
