--- a/beast/makefile
+++ b/beast/makefile
@@ -1,7 +1,7 @@
 CC = g++
-CFLAGS = `pkg-config --cflags opencv`
-LIBS = `pkg-config --libs opencv`
+#CFLAGS = `pkg-config --cflags opencv`
+#LIBS = `pkg-config --libs opencv`
 
+#$(CC) -g getstars.cpp -o getstars $(OBJ) $(LIBS)
 all: $(OBJ)
 	$(CC) beast.cpp -o beast $(OBJ)
-	$(CC) -g getstars.cpp -o getstars $(OBJ) $(LIBS)
