- Converted all of the code to apply the image distortion correction calculated by astrometry, using astopy wcs library     - this has the side effect of converting all pixel x,y coordinates into focal plane coordinates, which has 0,0 at the focal point of the sensor rather than at the top left corner of the image. This actually provides a much more natural system for conversion to x,y,z so I have converted beast, and everything else to use it
    The distortion correction results in more stars detected

--- a/beast/makefile
+++ b/beast/makefile
@@ -3,5 +3,8 @@ CC = g++
 #LIBS = `pkg-config --libs opencv`
 
 #$(CC) -g getstars.cpp -o getstars $(OBJ) $(LIBS)
+#$(CC) beast.cpp -o beast $(OBJ)
 all: $(OBJ)
-	$(CC) beast.cpp -o beast $(OBJ)
+	$(CC) -O2 -fPIC -c beast.cpp -o beast.o
+	$(CC) -O2 -fPIC -c beast_wrap.cxx -o beast_wrap.o -lstdc++ -I/usr/include/python2.7
+	$(CC) -shared -fPIC beast_wrap.o beast.o -o _beast.so
