Completed swig interface to relative startracker
beast.i:
- removed useless vector interface

getstars.py:
- added optional weight argument to rigid_transform_3D()

makefile:
- added rst.cpp to makefile

rst.cpp, beast.cpp:
- added ((used)) attribute to several functions (for swig

rst.h:
- used by rst.i

rst.i:
- swig binding file
- allows access to internal vectors

rst_test.py:
takes two images as arguments, outputs likleyhood & ids

--- a/beast/makefile
+++ b/beast/makefile
@@ -8,3 +8,7 @@ all: $(OBJ)
 	$(CC) -O2 -fPIC -c beast.cpp -o beast.o
 	$(CC) -O2 -fPIC -c beast_wrap.cxx -o beast_wrap.o -lstdc++ -I/usr/include/python2.7
 	$(CC) -shared -fPIC beast_wrap.o beast.o -o _beast.so
+	$(CC) -O2 -fPIC -c rst.cpp -o rst.o
+	$(CC) -O2 -fPIC -c rst_wrap.cxx -o rst_wrap.o -lstdc++ -I/usr/include/python2.7
+	$(CC) -shared -fPIC rst_wrap.o rst.o -o _rst.so
+	
